too much space in-between articles fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -82,8 +82,8 @@ footer{
 }
 
 article{
-	padding-bottom:2em;
-	margin-bottom:2em;
+	padding-bottom:1em;
+	margin-bottom:1em;
 	border-bottom: 1px solid #EEEEEE;
 }
 
